# IcebreakerNetwork

./: .gitignore  CMakeLists.txt
include/entities/: APIEntity.hpp  Code.h  File.hpp  FileDataContent.h  Machine.hpp  Package.hpp  Repository.hpp  Response.hpp  Status.hpp  User.hpp
include/sections/: Section.hpp
include/utils/: JsonUtils.hpp  MultipartHelpers.hpp  ResponseUtils.hpp  Utils.hpp
src/sections/: Auth.cpp  Files.cpp  Packages.cpp  Repositories.cpp
